--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "repl_nix_tpy"}]
 python = "^3.10"
 flask = "^3.0.2"
 sqlalchemy = "^2.0.28"
+werkzeug = "^3.0.1"
 
 
 [build-system]
